@@ -3107,6 +3107,30 @@ SCIP_RETCODE lpSetRandomseed(
    return SCIP_OKAY;
 }
 
+/** sets the PERSISTENTSCALING setting of the LP solver */
+static
+SCIP_RETCODE lpSetPersistentScaling(
+   SCIP_LP*              lp,                 /**< current LP data */
+   SCIP_Bool             persistentscaling,  /**< new PERSISTENTSCALING setting */
+   SCIP_Bool*            success             /**< pointer to store whether the parameter was successfully changed */
+   )
+{
+   assert(lp != NULL);
+   assert(success != NULL);
+
+   SCIP_CALL( lpCheckBoolpar(lp, SCIP_LPPAR_PERSISTENTSCALING, lp->lpipersistentscaling) );
+
+   if( persistentscaling != lp->lpipersistentscaling )
+   {
+      SCIP_CALL( lpSetBoolpar(lp, SCIP_LPPAR_PERSISTENTSCALING, persistentscaling, success) );
+      if( *success )
+         lp->lpipersistentscaling = persistentscaling;
+   }
+   else
+      *success = FALSE;
+
+   return SCIP_OKAY;
+}
 
 /*
  * Column methods
@@ -8831,6 +8855,7 @@ SCIP_RETCODE SCIPlpCreate(
    (*lp)->lpithreads = set->lp_threads;
    (*lp)->lpitiming = (int) set->time_clocktype;
    (*lp)->lpirandomseed = set->random_randomseed;
+   (*lp)->lpipersistentscaling = set->lp_persistentscaling;
    (*lp)->storedsolvals = NULL;
 
    /* allocate arrays for diving */
@@ -8953,6 +8978,13 @@ SCIP_RETCODE SCIPlpCreate(
             "LP Solver <%s>: random seed parameter not available -- SCIP parameter has no effect\n",
             SCIPlpiGetSolverName());
       }
+   }
+   SCIP_CALL( lpSetBoolpar(*lp, SCIP_LPPAR_PERSISTENTSCALING, (*lp)->lpipersistentscaling, &success) );
+   if( !success )
+   {
+      SCIPmessagePrintVerbInfo(messagehdlr, set->disp_verblevel, SCIP_VERBLEVEL_FULL,
+         "LP Solver <%s>: persistent scaling setting not available -- SCIP parameter has no effect\n",
+         SCIPlpiGetSolverName());
    }
 
    return SCIP_OKAY;
@@ -13820,6 +13852,7 @@ SCIP_RETCODE lpSolveStable(
    SCIP_CALL( lpSetConditionLimit(lp, set->lp_conditionlimit, &success) );
    SCIP_CALL( lpSetTiming(lp, set->time_clocktype, set->time_enabled, &success) );
    SCIP_CALL( lpSetRandomseed(lp, SCIPsetInitializeRandomSeed(set, set->random_randomseed), &success) );
+   SCIP_CALL( lpSetPersistentScaling(lp, set->lp_persistentscaling, &success) );
    SCIP_CALL( lpAlgorithm(lp, set, stat, lpalgo, resolve, keepsol, timelimit, lperror) );
    resolve = FALSE; /* only the first solve should be counted as resolving call */
 
